# yubikey-integration

./: CMakeLists.txt  README.md  boot_decrypt.sh  encrypt_ca_key.sh
assets/private_yk_key/: rsa_key.pem
assets/www_keys/: test_ca_public.pem
src/: inspect.cpp  yk_common.hpp  yk_decrypt.cpp  yk_encrypt.cpp  yk_serial.cpp
temp/: yk_cert.pem  yk_public.pem
test/: yk_public.key.crt.pem.crt  yk_public.key.pem
test/www_key/: test_ca_cert.pem  test_ca_key.pem
